Sat Oct 16 10:02:32 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Improved handling for wraparound headers

Sat Oct 16 02:41:17 CEST 2004 (tk)
----------------------------------
  * clamdscan: add missing support for --no-summary (problem reported by
	       Matt Leyda <mfleyda*e-one.com>)

Sat Oct 16 01:01:49 CEST 2004 (tk)
----------------------------------
  * libclamav/matcher-bm.c: speed up

Fri Oct 15 22:56:23 CEST 2004 (tk)
----------------------------------
  * libclamav/readdb.c: allow (optional) engine version requirement in sigs

Fri Oct 15 02:23:02 CEST 2004 (tk)
----------------------------------
  * libclamav/special.c: return 1 for other JPEG exploit variants

Fri Oct 15 01:53:42 CEST 2004 (tk)
----------------------------------
  * libclamav/scanners.c: do not return CL_EFORMAT to callers

Thu Oct 14 22:19:20 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Harden the test for RFC2047 encoded headers

Thu Oct 14 18:46:10 BST 2004 (njh)
----------------------------------
  * libclamav:		Handle RFC2047 on long lines produced by continuation
				headers
			Try to reclaim some memory if it becomes low when
				decoding very large files

Wed Oct 13 22:57:21 CEST 2004 (tk)
----------------------------------
  * libclamav/matcher-bm.c: bound memory usage

Wed Oct 13 22:20:17 CEST 2004 (tk)
----------------------------------
  * libclamav/str.c: include cli_strtokbuf() from Nigel

Wed Oct 13 20:21:26 CEST 2004 (tk)
----------------------------------
  * libclamav/mspack/cabd.c: fix possible description leak

Wed Oct 13 11:19:03 BST 2004 (njh)
----------------------------------
  * libclamav/untar.c:	Added handling of some extra file types within the
				archive. Thanks to
				djgardner*users.sourceforge.net

Wed Oct 13 09:57:54 BST 2004 (trog)
-----------------------------------
  * libclamav/special.c: fix logic check

Mon Oct 11 11:56:29 BST 2004 (njh)
----------------------------------